--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,16 @@
   font-family: 'Roboto Mono', monospace;
 }
 
+html {
+  overflow-x: hidden !important;
+}
+
 .header {
   background-image: url('./assets/img/bg-2.png');
   background-repeat: no-repeat;
   min-width: 100%;
   min-height: 100%;
   background-size: cover;
-  overflow-x: hidden;
 }
 
 .tech-bg {
