--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,5 +1,5 @@
 .body {
-    background-color: #D2DBDD;
+    background-image: url('../assets/img/universe.jpg');
     display: flex;
     display: -webkit-flex;
     -webkit-justify-content: center;
@@ -8,41 +8,37 @@
     align-items: center;
 }
 
-
 .cards {
     width: 100%;
     display: flex;
-    display: -webkit-flex;
+    /* display: -webkit-flex; */
     justify-content: center;
-    -webkit-justify-content: center;
-    max-width: 820px;
+    /* -webkit-justify-content: center; */
+    max-width: 800px;
 }
 
 .card--1 .card__img,
 .card--1 .card__img--hover {
-    background-image: url('https://images.pexels.com/photos/45202/brownie-dessert-cake-sweet-45202.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+    background-image: url('https://i.pinimg.com/564x/52/8c/ed/528cedae8d36154521ba1afd5cba7d4c.jpg');
 }
 
 .card--2 .card__img,
 .card--2 .card__img--hover {
-    background-image: url('https://images.pexels.com/photos/307008/pexels-photo-307008.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+    background-image: url('https://global-uploads.webflow.com/61d83a2ebb0ae01ab96e841a/63b580374a87081d713a72f6_OG-NLW-SETUP.png');
+}
+
+.card--3 .card__img,
+.card--3 .card__img--hover {
+    background-image: url('https://marcas-logos.net/wp-content/uploads/2020/02/Pokemon-logo.jpg');
+}
+
+.card--4 .card__img,
+.card--4 .card__img--hover {
+    background-image: url('https://tipo-de-cambio.com/wp-content/uploads/2022/05/Que-es-Linktree-Como-funciona-Esta-aprobado-por-Instagram.jpg');
 }
 
 .card__like {
     width: 18px;
-}
-
-.card__clock {
-    width: 15px;
-    vertical-align: middle;
-    fill: #AD7D52;
-}
-
-.card__time {
-    font-size: 12px;
-    color: #AD7D52;
-    vertical-align: middle;
-    margin-left: 5px;
 }
 
 .card__clock-info {
@@ -58,7 +54,6 @@
     height: 235px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-
 }
 
 .card__info-hover {
@@ -84,12 +79,13 @@
 }
 
 .card {
-    margin-right: 25px;
+    /* margin-right: 25px; */
+    margin: 1rem;
     transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-    background-color: #fff;
+    background-color: #1f1e1e;
     width: 33.3%;
     position: relative;
-    border-radius: 12px;
+    /* border-radius: 12px; */
     overflow: hidden;
     box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
@@ -101,38 +97,34 @@
 
 .card__info {
     z-index: 2;
-    background-color: #fff;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    background-color:#444d9c;
+    /* border-bottom-left-radius: 12px; */
+    /* border-bottom-right-radius: 12px; */
     padding: 16px 24px 24px 24px;
 }
 
 .card__category {
-    font-family: 'Raleway', sans-serif;
+    /* font-family: 'Raleway', sans-serif; */
     text-transform: uppercase;
     font-size: 13px;
     letter-spacing: 2px;
     font-weight: 500;
     color: #868686;
+    
 }
 
 .card__title {
     margin-top: 5px;
     margin-bottom: 10px;
-    font-family: 'Roboto Slab', serif;
+    /* font-family: 'Roboto Slab', serif; */
 }
 
 .card__by {
     font-size: 12px;
-    font-family: 'Raleway', sans-serif;
+    /* font-family: 'Raleway', sans-serif; */
     font-weight: 500;
 }
 
-.card__author {
-    font-weight: 600;
-    text-decoration: none;
-    color: #AD7D52;
-}
 
 .card:hover .card__img--hover {
     height: 100%;
