--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,5 +1,4 @@
-
-.wrapper{
+.wrapper {
   position: fixed;
   top: 0;
   /*left: -100%;*/
@@ -9,14 +8,18 @@
   background: #000;
   /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
+  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
   transition: all 0.6s ease-in-out;
 }
-#active:checked ~ .wrapper{
+
+#active:checked~.wrapper {
   /*left: 0;*/
-  right:0;
+  right: 0;
+  z-index: 999;
+
 }
-.menu-btn{
+
+.menu-btn {
   position: absolute;
   z-index: 2;
   right: 20px;
@@ -32,48 +35,54 @@
   /*color: #fff;*/
   /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
+  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
   transition: all 0.3s ease-in-out;
 }
+
 .menu-btn span,
 .menu-btn:before,
-.menu-btn:after{
-	content: "";
-	position: absolute;
-	top: calc(50% - 1px);
-	left: 30%;
-	width: 40%;
-	border-bottom: 2px solid #000;
-	transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+.menu-btn:after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  left: 30%;
+  width: 40%;
+  border-bottom: 2px solid #000;
+  transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
-.menu-btn:before{
+
+.menu-btn:before {
   transform: translateY(-8px);
 }
-.menu-btn:after{
+
+.menu-btn:after {
   transform: translateY(8px);
 }
 
 .close {
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-	transition: background .6s;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  transition: background .6s;
 }
 
 /* closing animation */
-#active:checked + .menu-btn span {
-	transform: scaleX(0);
+#active:checked+.menu-btn span {
+  transform: scaleX(0);
 }
-#active:checked + .menu-btn:before {
-	transform: rotate(45deg);
+
+#active:checked+.menu-btn:before {
+  transform: rotate(45deg);
   border-color: #fff;
 }
-#active:checked + .menu-btn:after {
-	transform: rotate(-45deg);
+
+#active:checked+.menu-btn:after {
+  transform: rotate(-45deg);
   border-color: #fff;
 }
-.wrapper ul{
+
+.wrapper ul {
   position: absolute;
   top: 60%;
   left: 55%;
@@ -83,11 +92,12 @@
   text-align: center;
 }
 
-.wrapper ul li{
+.wrapper ul li {
   height: 10%;
   margin: 15px 0;
 }
-.wrapper ul li a{
+
+.wrapper ul li a {
   position: relative;
   display: block;
   padding: 4px 0;
@@ -97,7 +107,8 @@
   text-transform: uppercase;
   transition: 0.5s;
 }
-.wrapper ul li a:after{
+
+.wrapper ul li a:after {
   position: absolute;
   content: "";
   top: 100%;
@@ -109,18 +120,21 @@
   transform-origin: right;
   transition: transform 0.5s;
 }
-.wrapper ul li a:hover:after{
+
+.wrapper ul li a:hover:after {
   transform: scaleX(1);
   transform-origin: left;
 }
-.wrapper ul li a:hover{
+
+.wrapper ul li a:hover {
   color: #95a5a6;
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
   display: none;
 }
-.content{
+
+.content {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -130,34 +144,45 @@ input[type="checkbox"]{
   width: 100%;
   color: #202020;
 }
+
 .content {
   font-size: 40px;
   font-weight: 800;
 }
 
- p{
+p {
   font-size: 20px;
   font-weight: 300;
   color: #fff;
 }
 
-.title  {
+.title {
   font-weight: 900 !important;
   font-size: 4rem !important;
-  color: #fff;
+  /* color: #fff; */ 
 }
 
-#active:checked ~ .wrapper ul li a{
+.bg {
+  background-image: linear-gradient(90deg, #4776e6 0%, #8e54e9 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
+}
+
+#active:checked~.wrapper ul li a {
   opacity: 1;
 }
-.wrapper ul li a{
+
+.wrapper ul li a {
   transition: opacity 1.2contents, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
   transform: translateX(100px);
 }
-#active:checked ~ .wrapper ul li a{
-	transform: none;
-	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackを緩めた感じ */
-   transition-delay: .6s;
+
+#active:checked~.wrapper ul li a {
+  transform: none;
+  transition-timing-function: ease, cubic-bezier(.1, 1.3, .3, 1);
+  /* easeOutBackを緩めた感じ */
+  transition-delay: .6s;
   transform: translateX(-100px);
 }
 
@@ -166,33 +191,34 @@ input[type="checkbox"]{
 .banner img {
   animation: updown 3s linear infinite;
 }
+
 @keyframes updown {
-    0% {
-        transform: translateY(-20px);
-    }
-    50% {
-        transform: translateY(20px);
-    }
-    100% {
-        transform: translateY(-20px);
-    }
+  0% {
+    transform: translateY(-20px);
+  }
+
+  50% {
+    transform: translateY(20px);
+  }
+
+  100% {
+    transform: translateY(-20px);
+  }
 }
 
 /* mobile  */
 
-@media (max-width: 991px)
-{
+@media (max-width: 991px) {
   .banner img {
     height: 200px;
     width: 200px;
   }
-  .content p{
+
+  .content p {
     font-size: 16px;
   }
-  
-  .title  {
+
+  .title {
     font-size: 3rem !important;
   }
 }
-
-
