--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,104 +6,65 @@
     background-size: cover;
 }
 
-.cards {
+.card-01 .badge-box {
+    /* position: absolute; */
     width: 100%;
-    display: flex;
-    /* display: -webkit-flex; */
-    justify-content: center;
-    /* -webkit-justify-content: center; */
-    /* max-width: 900px; */
+    height: 100%;
+    text-align: center;
 }
 
-.card__like {
-    width: 18px;
-}
-
-.card__clock-info {
-    float: right;
-}
-
-.card__img {
-    visibility: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 235px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-}
-
-.card__info-hover {
-    position: absolute;
-    padding: 16px;
-    width: 100%;
-    opacity: 0;
-    top: 0;
-}
-
-.card__img--hover {
-    transition: 0.2s all ease-out;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    position: absolute;
-    height: 235px;
-    top: 0;
-
-}
 
 .card {
-    margin: 1rem;
-    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
+    border: none !important;
     background-color: #1f1e1e;
-    /* width: 33.3%; */
-    /* position: relative; */
-    /* overflow: hidden; */
-    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1); */
 }
 
 .card:hover {
-    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
-    transform: scale(1.10, 1.10);
+    /* box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); */
+    /* transform: scale(1.10, 1.10); */
+    transition: all 1s ease;
+    border: none !important;
 }
 
-.card__info {
-    z-index: 2;
-    background-color: #5082C8;
-    padding: 0px 24px 24px 24px;
-}
+/* teste  */
 
-.card__category {
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 2px;
-    font-weight: 500;
-    color: #868686;
 
-}
-
-.card__title {
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
-.card__by {
-    font-size: 12px;
-    font-weight: 500;
-}
-
-.card:hover .card__img--hover {
-    height: 100%;
-    opacity: 0.3;
-}
-
-.card:hover .card__info {
-    background-color: transparent;
+.bg-hover {
     position: relative;
-}
-
-.card:hover .card__info-hover {
-    opacity: 1;
-}
+    display: inline-block;
+  }
+  
+  .bg-hover img {
+    width: 100%;
+    height: auto;
+    transition: filter 0.5s ease-in-out; /*Adicionando uma transição suave*/
+  }
+  
+  .bg-hover:hover img {
+    filter: blur(5px); /*Aplicando o efeito de desfoque*/
+  }
+  
+  .bg-hover .texto {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0; /*Ocultando o texto*/
+    z-index: 1; /*Garantindo que o texto fique sobre a imagem*/
+    transition: opacity 0.5s ease-in-out; /*Adicionando uma transição suave*/
+  }
+  
+  .bg-hover:hover .texto {
+    opacity: 1; /*Exibindo o texto ao passar o mouse*/
+  }
+  
+  .bg-hover .texto p {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+  }
