--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,41 +1,93 @@
 .contato-container {
-    text-align: center;
-    padding: 50px;
-    background-color: #000000;
-    border: 2px solid #6c757d;
-    border-radius: 5px;
-    margin: 50px auto;
-    max-width: 600px;
-  }
-  
-  .icones-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .icones-container a {
-    display: inline-block;
-    margin: 0 10px;
-    color: #6c757d;
-    border: 2px solid #6c757d;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    transition: all 0.3s ease;
-  }
-  
-  .icones-container a:hover {
-    color: #fff;
-    background-color: #6c757d;
-  }
-  
-  .contato-container p {
-    margin-top: 20px;
-    font-size: 14px;
-    color: #6c757d;
-  }
+  text-align: center;
+  padding: 50px;
+  background-color: #000000;
+  border: 2px solid #6c757d;
+  border-radius: 5px;
+  margin: 50px auto;
+  max-width: 600px;
+}
+
+.icones-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.icones-container a {
+  display: inline-block;
+  margin: 0 10px;
+  color: #6c757d;
+  /* border: 2px solid #6c757d; */
+  border-radius: 50%;
+  /* width: 40px; */
+  /* height: 40px; */
+  line-height: 40px;
+  text-align: center;
+  font-size: 35px;
+  transition: all 0.3s ease;
+}
+
+.icones-container a:hover {
+  color: #fff;
+  transform: scale(0.7);
+}
+
+.contato-container p {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #6c757d;
+}
+
+
+/* teste */
+/* 
+#hero-3:before {
+  background-image: url("http://cdn.bmwblog.com/wp-content/uploads/mini-rocketman-261.jpg");
+  background-attachment: fixed;
+  z-index: -3;
+}
+
+.container2 {
+  padding: 25vh 10%;
+  position: relative;
+  min-height: 100vh;
+  width: 100vw;
+  transform-style: inherit;
+}
+
+.container2,
+.container2:before {
+  background: 50% 50% / cover;
+}
+
+.container2:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.container3 {
+  color: #ccc;
+  font-size: 4vw;
+  margin: 0 auto;
+  padding: 25vh 0;
+  text-align: center;
+  width: 100%;
+} */
+
+#hero-3 {
+  background: #ede1b5;
+  background-image: url("https://images5.alphacoders.com/113/1136921.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  height: 100vh !important;
+}
