--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,4 +1,4 @@
-.body {
+.body-color {
     background-image: url('../assets/img/bg-2.png');
     background-repeat: no-repeat;
     min-width: 100%;
