--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,26 @@ html {
 }
 
 
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #000;
+  
+}
 
+body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #000;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #dddddd;
+}
 
 @media (max-width: 991px) {
   body {
