--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -5,8 +5,10 @@
   right: -100%;
   height: 100%;
   width: 100%;
-  background: #000;
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
+  background-image: linear-gradient(90deg, #4776e6 0%, #8e54e9 100%);
+
+  /* background: #000; */
+  /* background: linear-gradient(90deg, #f92c78, #4114a1); */
   /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
   /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
   transition: all 0.6s ease-in-out;
@@ -16,12 +18,13 @@
   /*left: 0;*/
   right: 0;
   z-index: 999;
+  position: fixed;
 
 }
 
 .menu-btn {
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  z-index: 99999;
   right: 20px;
   /*left: 20px; */
   top: 20px;
@@ -159,7 +162,7 @@ p {
 .title {
   font-weight: 900 !important;
   font-size: 4rem !important;
-  /* color: #fff; */ 
+  /* color: #fff; */
 }
 
 .bg {
