--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,70 +1,82 @@
 .body-color {
-    background-image: url('../assets/img/bg-2.png');
-    background-repeat: no-repeat;
-    min-width: 100%;
-    min-height: 100%;
-    background-size: cover;
+  background-image: url('../assets/img/bg-2.png');
+  background-repeat: no-repeat;
+  min-width: 100%;
+  min-height: 100%;
+  background-size: cover;
 }
 
 .card-01 .badge-box {
-    /* position: absolute; */
-    width: 100%;
-    height: 100%;
-    text-align: center;
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
 
 .card {
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
-    border: none !important;
-    background-color: #1f1e1e;
-    /* box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1); */
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
+  border: none !important;
+  background-color: #1f1e1e;
+  /* box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1); */
 }
 
 .card:hover {
-    /* box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); */
-    /* transform: scale(1.10, 1.10); */
-    transition: all 1s ease;
-    border: none !important;
+  /* box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); */
+  /* transform: scale(1.10, 1.10); */
+  transition: all 1s ease;
+  border: none !important;
 }
 
 /* teste  */
 
 
 .bg-hover {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
+}
+
+.bg-hover img {
+  width: 100%;
+  height: auto;
+  transition: filter 0.5s ease-in-out;
+  /*Adicionando uma transição suave*/
+}
+
+.bg-hover:hover img {
+  filter: blur(5px);
+  /*Aplicando o efeito de desfoque*/
+}
+
+.bg-hover .texto {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  /*Ocultando o texto*/
+  z-index: 1;
+  /*Garantindo que o texto fique sobre a imagem*/
+  transition: opacity 0.5s ease-in-out;
+  /*Adicionando uma transição suave*/
+}
+
+.bg-hover:hover .texto {
+  opacity: 1;
+  /*Exibindo o texto ao passar o mouse*/
+}
+
+.bg-hover .texto p {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #fff;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+}
+
+@media (max-width: 991px) {
+  #link {
+    padding-bottom: 50px;
   }
-  
-  .bg-hover img {
-    width: 100%;
-    height: auto;
-    transition: filter 0.5s ease-in-out; /*Adicionando uma transição suave*/
-  }
-  
-  .bg-hover:hover img {
-    filter: blur(5px); /*Aplicando o efeito de desfoque*/
-  }
-  
-  .bg-hover .texto {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0; /*Ocultando o texto*/
-    z-index: 1; /*Garantindo que o texto fique sobre a imagem*/
-    transition: opacity 0.5s ease-in-out; /*Adicionando uma transição suave*/
-  }
-  
-  .bg-hover:hover .texto {
-    opacity: 1; /*Exibindo o texto ao passar o mouse*/
-  }
-  
-  .bg-hover .texto p {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-  }
+}
