Ajust img in footer

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -91,3 +91,9 @@
   color: white;
   height: 100vh !important;
 }
+
+@media (max-width: 991px) {
+  #hero-3 {
+    background-size: contain;
+  }
+}
