--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -19,10 +19,7 @@
   display: inline-block;
   margin: 0 10px;
   color: #6c757d;
-  /* border: 2px solid #6c757d; */
   border-radius: 50%;
-  /* width: 40px; */
-  /* height: 40px; */
   line-height: 40px;
   text-align: center;
   font-size: 35px;
@@ -40,49 +37,9 @@
   color: #6c757d;
 }
 
-
-/* teste */
-/* 
-#hero-3:before {
-  background-image: url("http://cdn.bmwblog.com/wp-content/uploads/mini-rocketman-261.jpg");
-  background-attachment: fixed;
-  z-index: -3;
-}
-
-.container2 {
-  padding: 25vh 10%;
-  position: relative;
-  min-height: 100vh;
-  width: 100vw;
-  transform-style: inherit;
-}
-
-.container2,
-.container2:before {
-  background: 50% 50% / cover;
-}
-
-.container2:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.container3 {
-  color: #ccc;
-  font-size: 4vw;
-  margin: 0 auto;
-  padding: 25vh 0;
-  text-align: center;
-  width: 100%;
-} */
-
 #hero-3 {
   background: #ede1b5;
-  background-image: url("https://images5.alphacoders.com/113/1136921.jpg");
+  background-image: url('../assets/img/footer.webp');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -90,10 +47,4 @@
   background-size: cover;
   color: white;
   height: 100vh !important;
-}
-
-@media (max-width: 991px) {
-  #hero-3 {
-    background-size: contain;
-  }
 }
