--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,5 +1,5 @@
 .body-color {
-  background-image: url('../assets/img/bg-2.png');
+  background-image: url('../assets/img/bg-2.webp');
   background-repeat: no-repeat;
   min-width: 100%;
   min-height: 100%;
@@ -7,7 +7,6 @@
 }
 
 .card-01 .badge-box {
-  /* position: absolute; */
   width: 100%;
   height: 100%;
   text-align: center;
@@ -18,18 +17,12 @@
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
   border: none !important;
   background-color: #1f1e1e;
-  /* box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1); */
 }
 
 .card:hover {
-  /* box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); */
-  /* transform: scale(1.10, 1.10); */
   transition: all 1s ease;
   border: none !important;
 }
-
-/* teste  */
-
 
 .bg-hover {
   position: relative;
