--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -14,6 +14,13 @@
   position: fixed;
 }
 
+
+#active:checked~.wrapper::before {
+  right: -100%;
+  z-index: 999;
+  position: fixed;
+}
+
 .menu-btn {
   position: fixed;
   z-index: 99999;
@@ -37,7 +44,7 @@
   top: calc(50% - 1px);
   left: 30%;
   width: 40%;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid #fff;
   transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
@@ -156,6 +163,7 @@ p {
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
 }
+
 
 #active:checked~.wrapper ul li a {
   opacity: 1;
