--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,300;0,400;0,600;1,300&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -20,27 +18,20 @@ html {
   z-index: 999 !important;
 }
 
-body::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #000;
-  
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #000;
+
 }
 
-body::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #000;
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #000;
 }
 
-body::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #dddddd;
-}
-
-@media (max-width: 991px) {
-  
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #dddddd;
 }
