--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -6,7 +6,7 @@
   width: 100%;
   background-image: linear-gradient(90deg, #4776e6 0%, #8e54e9 100%);
   transition: all 0.6s ease-in-out;
-  /* z-index: 9999; */
+  z-index: 9999;
 }
 
 #active:checked~.wrapper {
