--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -216,4 +216,9 @@ p {
   .title {
     font-size: 2.5rem !important;
   }
+
+  .wrapper ul li {
+    position: relative;
+    left: 80% !important;
+  }
 }
