--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -12,6 +12,11 @@
   text-align: center;
 }
 
+.text-center {
+  text-align: center;
+  justify-content: center;
+}
+
 
 .card {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
