--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -22,6 +22,7 @@
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.0);
   border: none !important;
   background-color: #1f1e1e;
+  cursor: pointer;
 }
 
 .card:hover {
