Add new photo for background and cards for infos

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-  background-image: url('./assets/img/bg-2.webp') !important;
+  background-image: url('./assets/img/bg_3.webp') !important;
   background-repeat: no-repeat;
   min-width: 100%;
   min-height: 100%;
