--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,11 +6,11 @@
   background-size: cover;
 }
 
-.card-01 .badge-box {
+/* .card-01 .badge-box {
   width: 100%;
   height: 100%;
   text-align: center;
-}
+} */
 
 .text-center {
   text-align: center;
@@ -36,8 +36,8 @@
 }
 
 .bg-hover img {
-  width: 100%;
-  height: auto;
+  /* width: 100%;
+  height: auto; */
   transition: filter 0.5s ease-in-out;
   /*Adicionando uma transição suave*/
 }
@@ -79,10 +79,10 @@
   /* color: #fff !important; */
 }
 
-.fullscreen {
+/* .fullscreen {
   width: 100%;
   height: 100%;
-}
+} */
 
 @media (max-width: 991px) {
   #link {
