--- a/src/css/tech.css
+++ b/src/css/tech.css
@@ -368,27 +368,23 @@
 
     /* Estilos para o card */
     .cardTech {
-        width: 600px;
+        /* width: 600px; */
         padding: 20px;
-        border: 1px solid #f5f5f5;
+        /* border: 1px solid #f5f5f5; */
         border-radius: 10px;
         margin: 0 auto;
-        border-color: #f5f5f5 !important;
+        /* border-color: #f5f5f5 !important; */
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         animation: neonPulse 2s infinite;
         position: relative; /* Para que as bolinhas sejam posicionadas em relação a este elemento */
     }
 
     /* Estilos para o título centralizado no topo */
-    .cardTech h1 {
+    /* .cardTech h1 {
         color: #000;
         margin-top: 0;
         font-size: medium;
-    }
-
-    .cardTech p {
-        font-size: small;
-    }
+    } */
 
     /* Animação quando o cursor passar por cima dos itens da lista */
     .cardTech li:hover {
@@ -413,3 +409,28 @@
         width: auto;
     }
   }
+
+.titulo-principal{
+    font-size: 1.9rem;
+    /* max-width: 480px; */
+    /* text-align: center; */
+    /* margin: 60px auto; */
+    /* font-family:'Courier New', Courier, monospace; */
+    color: #fff !important;
+}
+.titulo-principal:after{
+ content: '|';
+ margin-left: 5px;
+ opacity: 1;
+ animation: pisca .7s infinite;
+}
+/* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
+
+@keyframes pisca{
+    0%, 100%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+}
